Portfolio CSS-Part

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -16,14 +16,19 @@
       <nav class="navbar">
         <img src="image/logo.svg" class="logo" alt="my-logo" />
         <div class="menu">
-          <a href="home.html">Instructions</a>
-          <a href="portfolio.html">Portfolio</a>
+          <a href="home.html" class="purple-text">Instructions</a>
+          <a href="portfolio.html" class="purple-text">Portfolio</a>
         </div>
       </nav>
     </header>
     <main class="container">
       <!-- TODO: First banner with title, descriptiona and avatar-->
       <!-- You can use the avatar image on the image folder -->
+      <div class="banner">
+        <h1>FullStack Developer</h1>
+        <p>I love to code and to create beautiful applications</p>
+        <img src="./image/avatar-bis.svg" alt="" />
+      </div>
 
       <!-- desktop image -->
       <section class="introduction">
@@ -51,19 +56,6 @@
           <div class="column">
             <div class="skill">
               <img src="image/frontend.svg" alt="frontend" />
-              <h2>Back-end Developer</h2>
-              <p>I like to code things from scratch.</p>
-              <h2 class="pink-text">Languages I speak:</h2>
-              <p>MySql</p>
-              <h2 class="pink-text">Dev Tools:</h2>
-              <ul id="dev-tools-back-list">
-                <li>VScode</li>
-              </ul>
-            </div>
-          </div>
-          <div class="column">
-            <div class="skill">
-              <img src="image/frontend.svg" alt="frontend" />
               <h2>Front-end Developer</h2>
               <p>I love bringing ideas to life.</p>
               <h2 class="pink-text">Languages I speak:</h2>
@@ -73,6 +65,19 @@
                 <li>You can modify</li>
                 <li>You can modify</li>
                 <li>You can modify</li>
+              </ul>
+            </div>
+          </div>
+          <div class="column">
+            <div class="skill">
+              <img src="image/frontend.svg" alt="frontend" />
+              <h2>Back-end Developer</h2>
+              <p>I like to code things from scratch.</p>
+              <h2 class="pink-text">Languages I speak:</h2>
+              <p>MySql</p>
+              <h2 class="pink-text">Dev Tools:</h2>
+              <ul id="dev-tools-back-list">
+                <li>VScode</li>
               </ul>
             </div>
           </div>
