--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -22,6 +22,13 @@
       </nav>
     </header>
     <main class="container">
+      <div class="title">
+        <div class="titleText">
+          <h3>FullStack Developer</h3>
+          <p>I code beautifully simple things, and I love what I do.</p>
+        </div>
+        <img src="./image/avatar.png" alt="" class="titleImage">
+      </div>
       <!-- TODO: First banner with title, descriptiona and avatar-->
       <!-- You can use the avatar image on the image folder -->
 
