--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -22,6 +22,11 @@
       </nav>
     </header>
     <main class="container">
+      <div class= "banner">
+        <h3>FullStack Developer</h3>
+        <p>Create some Stuff</p>
+        <img src="./image/avatar.png" alt="avatar" >
+      </div>
       <!-- TODO: First banner with title, descriptiona and avatar-->
       <!-- You can use the avatar image on the image folder -->
 
