Part One: Moddelling the CSS

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -14,17 +14,25 @@
   <body>
     <header>
       <nav class="navbar">
-        <img src="image/logo.svg" class="logo" alt="my-logo" />
-        <div class="menu">
-          <a href="home.html">Instructions</a>
-          <a href="portfolio.html">Portfolio</a>
+        <div class='logo-container'>
+          <img src="image/logo.svg" class="logo" alt="my-logo" />
+        </div>
+        <div class="nav-container">
+          <div class="menu">
+            <a href="home.html">Instructions</a>
+            <a href="portfolio.html">Portfolio</a>
+          </div>
         </div>
       </nav>
     </header>
     <main class="container">
       <!-- TODO: First banner with title, descriptiona and avatar-->
       <!-- You can use the avatar image on the image folder -->
-
+<section class="banner">
+  <h1>FullStack Developer</h1>
+  <p>I code beautifully simple things. I love what I do.</p>
+  <img id="avatar" src=".\image\avatar.png" alt='banner-img'/>
+</section>
       <!-- desktop image -->
       <section class="introduction">
         <figure class="desktop">
