modified:   site/portfolio.html "portfolio css done"

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -22,7 +22,12 @@
       </nav>
     </header>
     <main class="container">
-      <!-- TODO: First banner with title, descriptiona and avatar-->
+      <!-- TODO: First banner with title, description and avatar-->
+      <section class="title">
+        <h2>FullStack Developer</h2>
+        <h5>I code beautifully simple thigs and I love what I do.</h5>
+        <img src="image/avatar.png" class="avatar" alt="my-avatar" />
+      </section>
       <!-- You can use the avatar image on the image folder -->
 
       <!-- desktop image -->
