hide the big image when the screen is smaller than 700px.

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -36,7 +36,7 @@
       <!-- desktop image -->
       <section class="introduction">
         <figure class="desktop">
-          <img src="image/desktop.svg" alt="desktop" />
+          <img id="bigimg"src="image/desktop.svg" alt="desktop" />
         </figure>
       </section>
 
