finished the bonus.

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -95,7 +95,7 @@
 
       <!-- Third banner with the list of all your projects -->
       <section class="projects">
-        <div class="box">
+        <div class="box inprogress">
           <img
             src="https://mattfarley.ca/img/logos/kybercore.svg"
             alt="logo-entreprise"
@@ -128,7 +128,7 @@
           </p>
           <a href="www.ylbuilders.com">www.ylbuilders.com</a>
         </div>
-        <div class="box">
+        <div class="box inprogress">
           <img
             src="https://mattfarley.ca/img/logos/dovetail.svg"
             alt="logo-entreprise"
