Part One Javescript without Bonus

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -42,7 +42,7 @@
 
       <!-- Second banner with description of your name and your presentation -->
       <section class="presentation">
-        <div class="description pink-bg">
+        <div class="description pink-bg" id="description-bg">
           <h2>Hi, I’m <span id="name">Matt</span>. Nice to meet you.</h2>
           <p>
             Since the beginning of my journey as a freelance developer nearly 10
@@ -52,6 +52,7 @@
             naturally curious, and perpetually working on improving my chops one
             problem at a time.
           </p>
+          <button id="user-button">Modify Text and Color</button>
         </div>
 
         <!-- Bloc of list of skill front end and back end -->
