--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -26,7 +26,7 @@
       <section class="title">
         <h2>FullStack Developer</h2>
         <h5>I code beautifully simple thigs and I love what I do.</h5>
-        <img src="image/avatar.png" class="avatar" alt="my-avatar" />
+        <img id="avatarImage" src="image/avatar.png" class="avatar" alt="my-avatar" />
       </section>
       <!-- You can use the avatar image on the image folder -->
 
@@ -49,6 +49,7 @@
             naturally curious, and perpetually working on improving my chops one
             problem at a time.
           </p>
+          <button id="presentationButton">Modify text and color.</button>
         </div>
 
         <!-- Bloc of list of skill front end and back end -->
