--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -25,7 +25,8 @@
       <div class= "banner">
         <h3>FullStack Developer</h3>
         <p>Create some Stuff</p>
-        <img src="./image/avatar.png" alt="avatar" >
+        <img src="./image/avatar.png" alt="avatar" id= "avatarFirst" onclick="change()" >
+        
       </div>
       <!-- TODO: First banner with title, descriptiona and avatar-->
       <!-- You can use the avatar image on the image folder -->
@@ -49,6 +50,7 @@
             naturally curious, and perpetually working on improving my chops one
             problem at a time.
           </p>
+          <button onclick="changeName()">Modify Name and Color</button>
         </div>
 
         <!-- Bloc of list of skill front end and back end -->
