done some algos and worked with DOM

--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -30,7 +30,7 @@
       <section class="banner">
         <h1>Hello World</h1>
         <h3>Fullstack dev here ready to build.</h3>
-        <img src="./image/avatar.png">
+        <img id="avatar" src="./image/avatar.png">
       </section>
 
       <!-- desktop image -->
@@ -52,6 +52,7 @@
             naturally curious, and perpetually working on improving my chops one
             problem at a time.
           </p>
+          <button id="btnjs">Click here to change Text</button>
         </div>
 
         <!-- Bloc of list of skill front end and back end -->
